tests/pos/one.hs
one :: {v:Int| v == 1}
one = 1
