tests/neg/Int01.hs
twelve :: { v : Int  | v == 14 }
twelve = 12
